--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Tomorrow:wght@700;800&display=swap"
       rel="stylesheet"
     />
+    <script src="game.js"></script>
   </head>
   <body>
     <div class="alert"><p>Too High!</p></div>
