react to user input

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="guessPanel">
       <form class="guessForm">
         <h2>Number between 0 and 100:</h2>
-        <input type="number" min="0" max="100" placeholder="55" />
-        <button type="submit">guess</button>
+        <input name="guess" type="number" min="0" max="100" placeholder="55" class="userInput" />
+        <button type="submit" class="submitButton">guess</button>
       </form>
     </div>
   </body>
