add restart button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <li>Guess the secret number between 0 and 100.</li>
           <li>If you guess incorrect number, you will get a hint.</li>
           <li>If you guess correct number, you win!</li>
+          <li><button type="button" class="startAgainButton">Start again</button></li>
         </ul>
       </div>
 
