--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <form class="guessForm">
         <h2>Number between 0 and 100:</h2>
         <input name="guess" type="number" min="0" max="100" placeholder="55" class="userInput" />
-        <button type="submit" class="submitButton">guess</button>
+        <button type="button" class="submitButton">guess</button>
       </form>
     </div>
   </body>
