ignore obviously wrong guesses

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <p class="symbol arrow">&lt;</p>
           <div class="star">
             <img src="./star.svg" />
-            <p class="symbol">?</p>
+            <p class="symbol winNumber">?</p>
           </div>
           <p class="symbol arrow">&gt;</p>
           <p class="symbol number highGuess">100</p>
